req.query.symbols
